tests/outref/TCF002.ref

-- TCF002 : OCTO345 : Report syntax errors for function call parameter type mismatches
select ABS('balloons') as badarg from names;

select REPLACE('balloons', 12, 'hot air') as badarg from names;

select PG_CATALOG.PG_GET_EXPR('balloons', true) as badarg from names;

[ERROR]: ERR_UNKNOWN_FUNCTION: No function 'ABS' defined with given parameter types (VARCHAR)
LINE 2:1: select ABS('balloons') as badarg from names;
                 ^^^
[ERROR]: ERR_UNKNOWN_FUNCTION: No function 'REPLACE' defined with given parameter types (VARCHAR, INTEGER, VARCHAR)
LINE 4:1: select REPLACE('balloons', 12, 'hot air') as badarg from names;
                 ^^^^^^^
[ERROR]: ERR_UNKNOWN_FUNCTION: No function 'PG_CATALOG.PG_GET_EXPR' defined with given parameter types (VARCHAR, BOOLEAN)
LINE 6:1: select PG_CATALOG.PG_GET_EXPR('balloons', true) as badarg from n...
                 ^^^^^^^^^^^^^^^^^^^^^^
